# scorep-symbol-injector

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  FunctionFilter.cpp  FunctionFilter.h  SymbolInjector.cpp  SymbolInjector.h
test/: .gitignore  CMakeLists.txt  lit.cfg  lit.site.cfg.in  shared_lib_test.c
